Actualizando archivo html finalizado y archivo css

--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
     <section id="classairline">
         <div id="airline">
             <div id="first-class">
-                <div id="seat1" class="seat-first"></div>
-                <div id="seat2" class="seat-first"></div>
-                <div id="seat3" class="seat-first"></div>
-                <div id="seat4" class="seat-first"></div>
+                <div id="seat1" class="seat-first">F1</div>
+                <div id="seat2" class="seat-first">F2</div>
+                <br>
+                <div id="seat3" class="seat-first">F3</div>
+                <div id="seat4" class="seat-first">F4</div>
             </div>
             <div id="economic-class">
-                <div id="seat5" class="seat-economic"></div>
-                <div id="seat6" class="seat-economic"></div>
-                <div id="seat7" class="seat-economic"></div>
-                <div id="seat8" class="seat-economic"></div>
-                <div id="seat9" class="seat-economic"></div>
-                <div id="seat10" class="seat-economic"></div>
+                <div id="seat5" class="seat-economic">E1</div>
+                <div id="seat6" class="seat-economic">E2</div>
+                <div id="seat7" class="seat-economic">E3</div>
+                <br>
+                <div id="seat8" class="seat-economic">E4</div>
+                <div id="seat9" class="seat-economic">E5</div>
+                <div id="seat10" class="seat-economic">E6</div>
             </div>
         </div>
     </section>
